--- a/source_design/index.html
+++ b/source_design/index.html
@@ -32,7 +32,7 @@
             <span></span>
           </div>
     </nav>
-
+    <div class="mobile-line"></div>
 <div class="mainsection">
     <div class="mainsection__left part">
         <span>Tagline</span>
@@ -48,29 +48,40 @@
     </div>
 </div>
 <div class="features">
-    <div>
+    <div class="feature">
         <i class="fas fa-globe" style="font-size: 30px;"></i>
     <h3>Feature one</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam facere impedit rerum, veritatis illum libero deleniti blanditiis consequuntur id cupiditate </p>
     <a href="#">First link <i class="fas fa-arrow-right"></i></a>
     </div>
-    <div>
+    <div class="feature">
         <i class="fas fa-moon" style="font-size: 30px;"></i>
         <h3>Feature two</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam facere impedit rerum, veritatis illum libero deleniti blanditiis consequuntur id cupiditate </p>
         <a href="#">Second link <i class="fas fa-arrow-right"></i></a>
     </div>
-    <div>
+    <div class="feature">
         <i class="fas fa-layer-group" style="font-size: 30px;"></i>
         <h3>Feature three</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam facere impedit rerum, veritatis illum libero deleniti blanditiis consequuntur id cupiditate </p>
         <a href="#">Third link <i class="fas fa-arrow-right"></i></a>
     </div>
-    <div>
+    <div class="feature">
         <i class="fas fa-tint" style="font-size: 30px;"></i>
         <h3>Feature four</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam facere impedit rerum, veritatis illum libero deleniti blanditiis consequuntur id cupiditate </p>
         <a href="#">Fourth link <i class="fas fa-arrow-right"></i></a>
+    </div>
+</section>
+<section class="lowersection">
+    <div class="text-img-container">
+        <div class="text-container">
+        <h1>Collecting information<br> about the problem</h1>
+        <p>In the context of information, architecture information is seperate from both knowledge and data, and lies nebulously between them.</p>
+    </div>
+        <div class="img-container">
+            <img src="background.jpg">
+        </div>
     </div>
 </section>
 </body>
