--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -13,20 +13,30 @@
 </head>
 <body>
     <div class="main">
-    <div class="navbar"> 
+      <div class="navbar">
+        
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Order now</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Location</a></li>
-                <i class="bi bi-cart-dash-fill"></i>
-                <i class="bi bi-search"></i>
-            </ul>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Order now</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Location</a></li>
+            <div class="icons">
+              <i class="bi bi-cart-dash-fill"></i>
+              <i class="bi bi-search"></i>
+            </div>
+          </ul>
+          <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </nav>
-    </div>
+      </div>
+      
+   
 
     <div class="main-search">
     <h1>Welcome <br> To Our Cuisine Restaurant</h1>
@@ -68,7 +78,7 @@
           <div class="carousel-container">
                <img src="pictures/fruit pudding.jpg">
                <img src="pictures/pancakes.jpg"> 
-               <img src="pictures/mashed beans.jpg">
+               <img src="pictures/pasta.jpg">
           </div>
         </div>
         <!-- picture 02 -->
@@ -94,7 +104,7 @@
           <div class="carousel-container">
             <img src="pictures/avocaddo sandwich.jpg">
             <img src="pictures/waffles.jpg">
-            <img src="pictures/veggie bowl.jpg">
+            <img src="pictures/rice.jpg">
           </div>
         </div>
         <!-- picture 05 -->
@@ -102,7 +112,7 @@
           <div class="carousel-container">
             <img src="pictures/jelly sandwich.jpg">
             <img src="pictures/salad.jpg">
-            <img src="pictures/grilled patties.jpg">
+            <img src="pictures/raspberry cake.jpg">
           </div>
         </div>
               <!-- Slider nav -->
@@ -156,6 +166,7 @@
             <div class="slide active-slide">
               <div class="carousel-container-reviews">
                    <img src="pictures/portrait1.png" class="round">
+                   <span>Benjamin</span>
                    <blockquote>Cuisine Restaurant is a hidden gem! As a lover of fusion cuisine, I was thrilled to find this place. The menu combines flavors from various culinary traditions in a unique and innovative way. Just WOW!<br>
                     <div class="star-container">
                     <img  src="https://assets.codepen.io/296057/fem-star.svg" alt="star" class="star">
@@ -171,6 +182,7 @@
             <div class="slide">
                 <div class="carousel-container-reviews">
                     <img src="pictures/portrait2.png" class="round">
+                    <span>Emma</span>
                     <blockquote>I had the most amazing dining experience at Cuisine Restaurant! The ambiance was elegant and inviting, and the service was top-notch. I highly recommend Cuisine Restaurant for a memorable dining experience.<br>
                       <div class="star-container">
                      <img  src="https://assets.codepen.io/296057/fem-star.svg" alt="star" class="star">
@@ -186,6 +198,7 @@
             <div class="slide">
                 <div class="carousel-container-reviews">
                     <img src="pictures/portrait3.png" class="round">
+                    <span>Sophia</span>
                     <blockquote>Cuisine Restaurant exceeded my expectations for a special night out. The elegant decor and attentive staff created a romantic atmosphere. I ordered the chef's tasting menu, and each course was a masterpiece.<br>
                       <div class="star-container">
                      <img  src="https://assets.codepen.io/296057/fem-star.svg" alt="star" class="star">
@@ -200,6 +213,7 @@
             <div class="slide">
                 <div class="carousel-container-reviews">
                     <img src="pictures/portrait4.png" class="round">
+                    <span>Olivia</span>
                     <blockquote>I had a decent dining experience at Cuisine Restaurant. The atmosphere was pleasant, and the food was good. However, it took longer than usual to receive our orders.<br>
                       <div class="star-container">
                      <img  src="https://assets.codepen.io/296057/fem-star.svg" alt="star" class="star">
@@ -213,6 +227,7 @@
             <div class="slide">
                 <div class="carousel-container-reviews">
                     <img src="pictures/portrait5.png" class="round">
+                    <span>James</span>
                     <blockquote>I tried their signature dish, the grilled salmon with citrus glaze, and it was cooked to perfection. The only minor drawback was the noise level, which was a bit higher than expected. Nonetheless, Cuisine Restaurant is definitely worth a visit for its delicious cuisine and welcoming ambiance.<br>
                       <div class="star-container">
                      <img  src="https://assets.codepen.io/296057/fem-star.svg" alt="star" class="star">
