--- a/level-ground/index.html
+++ b/level-ground/index.html
@@ -58,6 +58,7 @@
         VOLUNTEER WITH LEVEL GROUND
     </h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ullam totam necessitatibus quos possimus a et, soluta culpa quae tempore consectetur nemo non id quod! Ea maxime iusto ad odit!</p><button>VOLUNTEER</button></div></section>
     <footer>
+        <div class="footers">
         <div class="left-footer">
          <div class="contact">
             <a href="#"><i class="material-icons">call</i></a>
@@ -89,6 +90,7 @@
         </div>
         <div class="white-line"></div>
         <p>Level Ground Mixed Martial Arts is a tax-exempt, 501(c)3 organization under the IRS, EIN 46-3915852</p>
+    </div>
        </footer>
        
     <script>
