--- a/inject_brand/index.html
+++ b/inject_brand/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" integrity="sha512-ZnR2wlLbSbr8/c9AgLg3jQPAattCUImNsae6NHYnS9KrIwRdcY9DxFotXhNAKIKbAXlRnujIqUWoXXwqyFOeIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="main.css">
+<script src="main.js" type="module"></script>
     <title>Inject Brand</title>
 </head>
 <body>
@@ -122,13 +123,161 @@
     </div>
 </section>
 <section class="how-does-it-work">
-
+    <div>
+        <h4>How Does It Work?</h4>
+        <p> 
+            Not only fitness classes should be fun, but also their internal management. With busy class schedules and wide variety of instructors, administration is always.
+        </p>
+    </div>
+</section>
+<section class="create-account">
+    <div>
+        <figure>
+            <img src="placeholder2.jpg">
+        </figure>
+    </div>
+        <div>
+            <span>CREATE AN ACCOUNT FOR FREE</span>
+            <h4>Create an Account for Free and use free trial</h4>
+            <p>We updated a calndar so that managers can have an easy and rapid access to instructor schedule. From now on, there will be an ability to set tasks right on the dashboard. We updated a calndar so that managers can have an easy and rapid.</p>
+            
+            <h6><i class="bi bi-lightning-charge-fill"></i>FASTEST RESPONSE RATE</h6>
+            <p>Not only fitness classes should be fun, but also their internal management.</p>
+            
+            <h6><i class="bi bi-check2-square"></i>QUICK TURNAROUND</h6>
+            <p>Not only fitness classes should be fun, but also their internal management. With busy class schedules and wide variety of instructors, administration.</p>
+        </div>
+        <div class="create-account-button">
+        <button >VIEW HOW IT WORKS</button>
+    </div>
+    <div class="features-header">
+        <span>CREATE AN ACCOUNT FOR FREE</span>
+        <h4>Core Features and Technologies list</h4>
+    </div>
 </section>
 <section class="features">
+    <div class="polygon"></div>
+    <div class="feature-container">
+        <div class="slider-container">
+            <div class="inner-slider">
+                <div class="card">
+                    <i class="bi bi-app"></i>
+                    <h5>ALLOW US TO BE YOUR GUIDE</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p>
+                </div>
+                <div class="card"><h5>VIEW ALL FEATURES</h5></div>
+                <div class="card">
+                    <i class="bi bi-app"></i>
+                    <h5>EFFECTIVE SOCIAL MEDIA</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p>
+                </div>
+                <div class="card">                    <i class="bi bi-app"></i>
+                    <h5>AS A BRAND MARKETING FIRM</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p></div>
+                <div class="card">                    <i class="bi bi-app"></i>
+                    <h5>WITH EXTENSIVE EXPERIENCE</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p></div>
+                <div class="card">                    <i class="bi bi-app"></i>
+                    <h5>WE PROVIDE FROM THE INSIDE-OUT</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p></div>
+                <div class="card">
+                    <i class="bi bi-app"></i>
+                    <h5>WE PROVIDE FROM THE INSIDE-OUT</h5>
+                    <p>Not only fitness classes should be fun, but also their internal management.</p></div>
+                </div>
+        </div>
+      </div>
 </section>
-<section class="order-content"></section>
-<section class="carousel"></section>
-<div class="band"></div>
-<footer></footer>
+<section class="standpoint">
+    <div>
+        <figure>
+            <img src="placeholder2.jpg">
+        </figure>
+    </div>
+        <div>
+            <span>FROM THIS STANDPOINT</span>
+            <h4>Whose Approach is More Like That of a Fully-Integrated Marketing</h4>
+            <p>Not only fitness classes should be fun, but also their internal managment. With busy class schedules and wide variety of instructors, administration is always a big deal. The redesign challenge was to make manager life easier.</p>
+            <p>We updated a calendar so that managers can have an easy and rapid access to instructor schedule. From now on, there will be an ability to set tasks right on the dashboard</p>
+            <button>ORDER CONTENT</button>
+        </div>
+</section>
+<section class="carousel">
+    <div class="chevron-left chevron"><i class="bi bi-chevron-left"></i></div>
+    <div class="carousel-main">
+        <span>LOVED BY</span>
+        <h4>Need high quality original content that is SEO optimized and verified for orginality? Place an order now, and our creative wordsmiths are on it like dots on I's with all the necessary resources.</h4>
+        <div class="review-author">
+        <figure class="hero"></figure>
+        <div>
+        <h5>ELON MUSK</h5>
+        <span>CEO & Founder Tesla</span>
+    </div>
+        </div>
+    </div>
+    <div class="chevron-right chevron"><i class="bi bi-chevron-right"></i></div>
+</section>
+<section class="band">
+    <div>
+        <div>
+        <span>PLACE AN ORDER NOW, AND ALL OUR GUYS</span>
+        <h4>Will start working on your project immediately.</h4>
+    </div>
+    <div>
+        <button>ORDER CONTENT</button>
+        <button>CONTACT US</button>
+    </div>
+    </div>
+</section>
+<footer>
+    <div class="grid-container">
+        <ul class="item1">
+            <li>CIRCLECIRCLE LTD</li>
+            <li>On our way to office we start preparing for the day in our minds</li>
+            <li><i class="bi bi-app"></i>Careers</li>
+            <li><i class="bi bi-app"></i>+1 718 222 22 222</li>
+            <li><i class="bi bi-app"></i>hello@circle.com</li>
+        </ul>
+        <ul class="item2">
+            <li>PRODUCTS</li>
+            <li><a href="#">Messaging API</a></li>
+            <li><a href="#">Content Pricing</a></li>
+            <li><a href="#">Integrations</a></li>
+            <li><a href="#">Channels</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">API Reference</a></li>
+            <li><a href="#">API Libraries</a></li>
+            <li><a href="#">Changelog</a></li>
+            <li><a href="#">E-Books</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Contact Sales</a></li>
+        </ul>
+        <ul class="item3">
+            <li>FOR USERS</li>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Learn More</a></li>
+            <li><a href="#">Privacy & Terms</a></li>
+            <li><a href="#">Prototyping</a></li>
+            <li><a href="#">Sketch Business</a></li>
+        </ul>
+        <ul class="item4">
+            <li>INFORMATION</li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">How it Works</a></li>
+            <li><a href="#">Platform Features</a></li>
+            <li><a href="#">Our Copywriters</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Testimonials</a></li>
+        </ul>
+        <ul class="item5">
+            <li>RESOURCES</li>
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Content Marketing Blog</a></li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#"><i class="bi bi-github"></i></a><a href="#"><i class="bi bi-twitter"></i></a><a href="#"><i class="bi bi-linkedin"></i></a><a href="#"><i class="bi bi-facebook"></i></a></li>
+        </ul>
+      </div>
+</footer>
 </body>
 </html>
